--- a/config.yml
+++ b/config.yml
@@ -29,6 +29,7 @@ PATHS:
     # - "node_modules/motion-ui/src"
     - "node_modules/bootstrap/scss"
     - "node_modules/air-datepicker/src/sass"
+    - "node_modules/open-iconic/font/css"
   # Paths to JavaScript entry points for webpack to bundle modules
   entries:
     - "src/assets/js/app.js"
