--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-uncss": "^1.0.1",
     "js-yaml": "^3.4.6",
+    "open-iconic": "^1.1.1",
     "panini": "^1.3.0",
     "popper.js": "^1.12.9",
     "rimraf": "^2.4.3",
