--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.7.2",
+    "baguettebox.js": "^1.10.0",
     "bootstrap": "^4.0.0",
     "browser-sync": "^2.10.0",
     "expose-loader": "^0.7.4",
