--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "rimraf": "^2.4.3",
     "style-sherpa": "^1.0.0",
     "vinyl-named": "^1.1.0",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^2.6.1",
     "webpack-stream": "^3.2.0",
     "yargs": "^3.8.0"
